--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "grpc-python-book-server"]
 	path = grpc-python-book-server
 	url = git@github.com:kekhuay/grpc-python-book-server.git
+	branch = master
 [submodule "grpc-python-book-client"]
 	path = grpc-python-book-client
 	url = git@github.com:kekhuay/grpc-python-book-client.git
